<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.job4j</groupId>
    <artifactId>junior</artifactId>
    <packaging>pom</packaging>
    <version>2.0</version>
    <name>junior</name>
    <url>http://job4j.ru/</url>

    <profiles>
        <profile>
            <id>test</id>
            <properties>
                <db.url>jdbc:postgresql://127.0.0.1:5432/tracker</db.url>
                <db.username>pcontrol</db.username>
                <db.password>Sahalin11</db.password>
                <db.driver>org.postgresql.Driver</db.driver>
            </properties>
        </profile>
        <profile>
            <id>production</id>
            <properties>
                <db.url>jdbc:postgresql://127.0.0.1:5432/tracker</db.url>
                <db.username>pcontrol</db.username>
                <db.password>Sahalin11</db.password>
                <db.driver>org.postgresql.Driver</db.driver>
            </properties>
        </profile>

        <profile>
            <id>travis</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <db.url>jdbc:postgresql://localhost/tracker</db.url>
                <db.username>postgres</db.username>
                <db.password></db.password>
                <db.driver>org.postgresql.Driver</db.driver>
            </properties>
        </profile>
    </profiles>


    <properties>
     <!--   <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     -->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>chapter_001</module>
        <module>chapter_002</module>
        <module>chapter_004</module>
        <module>chapter_003</module>
        <module>chapter_005</module>
        <module>chapter_006</module>
        <module>chapter_007</module>
        <module>chapter_008</module>
        <module>chapter_009</module>
        <module>chapter_010</module>
        <module>chapter_011</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
       	<plugin>

	    <groupId>org.apache.maven.plugins</groupId>
    		<artifactId>maven-checkstyle-plugin</artifactId>
    		<version>3.1.0</version>
    		<executions>
        	<execution>
        	    <id>validate</id>
        	    <phase>validate</phase>
        	    <configuration>
        	        <configLocation>checkstyle.xml</configLocation>
        	        <encoding>UTF-8</encoding>
        	        <consoleOutput>true</consoleOutput>
        	        <failsOnError>true</failsOnError>
        	        <includeTestSourceDirectory>true</includeTestSourceDirectory>
        	    </configuration>
        	    <goals>
        	        <goal>check</goal>
        	    </goals>
        	</execution>
    	      </executions>
        </plugin>

      </plugins>
        <defaultGoal>install</defaultGoal>
    </build>
    <dependencies>
    	<dependency>
    	    <groupId>org.hamcrest</groupId>
    	    <artifactId>hamcrest-all</artifactId>
    	    <version>1.3</version>
        <scope>test</scope>
    </dependency>
    	<dependency>
    	    <groupId>junit</groupId>
    	    <artifactId>junit</artifactId>
    	    <version>4.12</version>
    	    <scope>test</scope>
    	</dependency>
        <dependency>
            <groupId>net.jcip</groupId>
            <artifactId>jcip-annotations</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.21.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.11.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.11.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-graphics -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>11</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>11</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11</version>
        </dependency>
    </dependencies>

</project>
